3/7/16 8:50pm Exercise Media Query
Done

--- a/selfpractice/arkham1.html
+++ b/selfpractice/arkham1.html
@@ -8,7 +8,7 @@
 
 <head>
     <title>The Batcave</title>
-    <ink rel="stylesheet" href="css/css-reset.css" />
+    <link rel="stylesheet" href="css/css-reset.css" />
     <link rel="stylesheet" href="css/arkham1.css"
 </head>
 <header>
